<resources>
    <string name="app_name">quizlocker</string>
    <string name="textField_editText_hint">아무 글씨나 입력하세요</string>
    <string name="saveButton_Button_text">저장</string>
    <string name="loadButton_Button_text">불러오기</string>
    <string name="nameField_editText_hint">이름</string>
    <string name="pushCheckBox_CheckBox_text">푸시알림 사용</string>
    <!-- 환경 설정 창에서 퀴즈 종류로 사용할 문자열 배열-->
    <string-array name="category">
        <item>일반상식</item>
        <item>역사</item>
        <item>수도</item>
    </string-array>
</resources>
